Match platform behavior on `mp-test` regarding SuiteAPI credentials (#328)
* Send null cluster connection info in mp-test

* Make Adapterconnectioninfo nullable

---------
